# turnir

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_migration.py
app/: config.py  db.py  main.py
app/api/: tournament.py
app/models/: tournament.py
app/repositories/: tournament.py
app/schemas/: tournament.py
app/services/: tournament.py
tests/: test_registration.py
